tests/grammar/types/literal/lit_err_04_str_02/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:5
  |
5 |     x_01: 443
  |     ^ expected str(TCP) | str(UDP), got int(443)
  |
 --> ${CWD}/main.k:2:5
  |
2 |     x_01: "TCP" | 'UDP'
  |     ^ variable is defined here, its type is str(TCP) | str(UDP), but got int(443)
  |